<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_lobby"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/fragment_lobby_tvStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_lobby_statusbar"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/fragment_lobby_tvStatusBar_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_lobby_statusbar_name"
        android:layout_above="@id/fragment_lobby_tvStatusBar" />

    <Button
        android:text="@string/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_lobby_tvStatusBar_name"
        android:layout_alignParentStart="true"
        android:id="@+id/fragment_lobby_bLogin" />

    <ListView
        android:id="@+id/fragment_lobby_lvFreePlayersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/fragment_lobby_bLogin" />

    <Button
        android:text="@string/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fragment_lobby_bLogin"
        android:layout_above="@id/fragment_lobby_tvStatusBar_name"
        android:id="@+id/fragment_lobby_bLogout" />

    <Button
        android:text="@string/button_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_lobby_bInvite"
        android:layout_above="@id/fragment_lobby_tvStatusBar_name"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
